[tool.poetry]
name = "lite-sandbox"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pre-commit = "^2.1.0"
sqlfluff = "^0.3.1"
visidata = "^1.5.2"
litecli = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
